# src/api/routers/todo.go
@@ -10,7 +10,7 @@ import (
 func Todo(router *gin.RouterGroup, cfg *config.Config) {
 	h := handlers.NewToDoHandler()
 	router.POST("/", h.CreateToDo)
-	router.GET("/", h.GetAllToDos)
+	router.POST("/filter", h.GetToDosByFilter)
 	router.PUT("/:id", middlewares.AuthorizeTodoAccess(), h.UpdateToDo)
 	router.GET("/:id", middlewares.AuthorizeTodoAccess(), h.GetToDoById)
 	router.DELETE("/:id", middlewares.AuthorizeTodoAccess(), h.DeleteTodo)
